test_src/compiler_errors/control_flow/DuplicateSwitchLabel2.b
class DuplicateSwitchLabel2 {
    void test() {
        switch (1) {
            default:
                break;
            case 2:
                break;
            default:
                break;
        }
    }
}
